feat(index): initial view for landing page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Seluma Studio</title>
+  <script defer src="https://umami-analytics-production-ed6d.up.railway.app/script.js" data-website-id="7f5af0ed-ddc0-48ae-8d37-7c680ebb3723"></script>
   <style>
     body {
       margin: 0;
