feat(index): update mission statement

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <body>
   <h1>Seluma Studio</h1>
   <p style="font-style: italic; opacity: 0.85; max-width: 700px;">
-    Seluma Studio exists to build thoughtful tools that bring clarity, reduce negativity, and elevate the human experience. Born from reflection, driven by purpose — we create for good.
+    Seluma Studio began during a period of reflection. I wanted to create in a way that felt honest, deliberate, and useful. There’s enough technology that distracts or harms. This space is for building the opposite.
   </p>
   <p>Website coming soon. In the meantime, visit <a href="https://jorgebuckley.com" target="_blank">jorgebuckley.com</a>.</p>
 </body>
